--- a/shop.html
+++ b/shop.html
@@ -17,7 +17,7 @@
             <li><a class="active" href="shop.html">Shop</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="contacts.html">Contacts</a></li>
-            <li><a href=""><i class="fa-brands fa-opencart"></i></a></li>
+            <li><a href="cart.html"><i class="fa-brands fa-opencart"></i></a></li>
             <a href="#" id="close" class="close"><i class="far fa-x"></i></a>
         </ul>
         <div class="mobile">
